--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -91,3 +91,24 @@
   padding: 0;
   margin: 0;
 }
+
+.simpleLoginWrap {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 330px; /* 부모 컨테이너 전체를 채우도록 */
+}
+
+.simpleLoginTitle {
+  margin: 0 20px;
+  color: #909090;
+  font-size: 13px;
+  white-space: nowrap; /* 제목이 줄 바꿈 되지 않도록 */
+}
+
+.simpleLoginBar {
+  flex-grow: 1;
+  height: 0.5px;
+  background-color: #909090;
+}
